--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -1,5 +1,22 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    test
+    <h1>Books</h1>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Author</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for book in books %}
+            <tr>
+                <td>{{ book.name }}</td>
+                <td>{{ book.author }}</td>
+            </tr>
+        </tbody>
+        {% endfor %}
+    </table>
 {% endblock %}
