--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+
+{% block title %}
+    Books
+{% endblock %}
+
 {% block body %}
     <h1>Books</h1>
 
@@ -13,7 +18,9 @@
 
     <a href="{{ path('app_admin_book_index') }}">Reset</a>
 
-    <br />
+    <hr />
+
+    <a href="{{ path('app_admin_book_create') }}">Create</a>
 
     <table>
         <thead>
@@ -28,13 +35,20 @@
             <tr>
                 <td>{{ book.name }}</td>
                 <td>{{ book.author }}</td>
-                <td><a href="{{ path('app_admin_book_show', {'id' : book.id}) }}">Show</a></td>
+                <td>
+                    <a href="{{ path('app_admin_book_show', {'id' : book.id}) }}">Show</a>
+                    <a href="{{ path('app_admin_book_update', {'id' : book.id}) }}">Edit</a>
+                    <form method="POST" action="{{ path('app_admin_book_delete', {'id': book.id}) }}">
+                        <input type="hidden" name="_method" value="DELETE" />
+                        <input type="submit" value="Delete" />
+                    </form>
+                </td>
             </tr>
         </tbody>
         {% endfor %}
     </table>
 
-    <br />
+    <hr />
 
     {% if books.haveToPaginate() %}
         {{ pagerfanta(books, 'twig', options|default({'template': '@BabDevPagerfanta/default.html.twig'})) }}
