--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -1,11 +1,13 @@
-{% extends 'base.html.twig' %}
+{% extends '@SyliusAdminUi/layout.html.twig' %}
 
 {% block title %}
     {{ book.name }}
 {% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>{{ book.name }}</h1>
+
+    <a href="{{ path('app_book_index') }}">Back to index</a>
 
     <h2>Author</h2>
     <p>{{ book.author }}</p>
