Use Resource grid view

--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -24,6 +24,8 @@
 
     <a href="{{ path('app_book_create') }}">Create</a>
 
+    {{ dump(books) }}
+
     <table>
         <thead>
             <tr>
