--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>{{ book.name }}</h1>
 
-    <a href="{{ path('app_book_index') }}">Back to index</a>
+    <a href="{{ path('app_admin_book_index') }}">Back to index</a>
 
     <h2>Author</h2>
     <p>{{ book.author }}</p>
