--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -18,11 +18,11 @@
         <button type="submit">Search</button>
     </form>
 
-    <a href="{{ path('app_book_index') }}">Reset</a>
+    <a href="{{ path('app_admin_book_index') }}">Reset</a>
 
     <hr />
 
-    <a href="{{ path('app_book_create') }}">Create</a>
+    <a href="{{ path('app_admin_book_create') }}">Create</a>
 
     {{ dump(books) }}
 
